--- a/ZapretControl/Locales/Strings.resx
+++ b/ZapretControl/Locales/Strings.resx
@@ -120,8 +120,14 @@
   <data name="About" xml:space="preserve">
     <value>About</value>
   </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
   <data name="Close" xml:space="preserve">
     <value>Close ZapretControl</value>
+  </data>
+  <data name="OK" xml:space="preserve">
+    <value>OK</value>
   </data>
   <data name="Restart" xml:space="preserve">
     <value>Restars Zapret</value>
