fix: MainFrom and missing strings

--- a/ZapretControl/Locales/Strings.resx
+++ b/ZapretControl/Locales/Strings.resx
@@ -126,6 +126,12 @@
   <data name="Close" xml:space="preserve">
     <value>Close ZapretControl</value>
   </data>
+  <data name="NoBinary" xml:space="preserve">
+    <value>winws.exe not found.</value>
+  </data>
+  <data name="NoScripts" xml:space="preserve">
+    <value>Directory with scripts not found.</value>
+  </data>
   <data name="OK" xml:space="preserve">
     <value>OK</value>
   </data>
