--- a/ZapretControl/Locales/Strings.resx
+++ b/ZapretControl/Locales/Strings.resx
@@ -147,6 +147,9 @@
   <data name="SettingsAutostart" xml:space="preserve">
     <value>Start Zapret when ZapretControl is started</value>
   </data>
+  <data name="SettingsGameFilter" xml:space="preserve">
+    <value>Bypass mode for games (1024-65535)</value>
+  </data>
   <data name="SettingsMinimized" xml:space="preserve">
     <value>Start minimized</value>
   </data>
