--- a/ZapretControl/Locales/Strings.resx
+++ b/ZapretControl/Locales/Strings.resx
@@ -135,11 +135,17 @@
   <data name="OK" xml:space="preserve">
     <value>OK</value>
   </data>
+  <data name="OpenList" xml:space="preserve">
+    <value>Open list-general</value>
+  </data>
   <data name="Restart" xml:space="preserve">
     <value>Restars Zapret</value>
   </data>
   <data name="Scripts" xml:space="preserve">
     <value>Scripts</value>
+  </data>
+  <data name="Service" xml:space="preserve">
+    <value>Service</value>
   </data>
   <data name="Settings" xml:space="preserve">
     <value>Settings</value>
@@ -164,5 +170,8 @@
   </data>
   <data name="Stop" xml:space="preserve">
     <value>Stop Zapret</value>
+  </data>
+  <data name="SwitchIPSet" xml:space="preserve">
+    <value>Switch IP-set</value>
   </data>
 </root>
