--- a/ZapretControl/icons8.resx
+++ b/ZapretControl/icons8.resx
@@ -124,6 +124,9 @@
   <data name="CopyToClipboard16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Icons8\CopyToClipboard16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Document16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Icons8\Document16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Info16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Icons8\Info16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -138,5 +141,8 @@
   </data>
   <data name="Shutdown16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Icons8\Shutdown16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Switch16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Icons8\Switch16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
